@@ -1,28 +1,30 @@
 package edu.umd.cs.findbugs.detect;
 
-import static org.hamcrest.collection.IsEmptyIterable.emptyIterable;
-import static org.hamcrest.core.Is.is;
-import static org.junit.Assert.assertThat;
+import static org.hamcrest.Matchers.emptyIterable;
+import static org.hamcrest.Matchers.is;
+import static org.hamcrest.MatcherAssert.assertThat;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 
 import edu.umd.cs.findbugs.BugCollection;
-import edu.umd.cs.findbugs.test.SpotBugsRule;
+import edu.umd.cs.findbugs.test.SpotBugsExtension;
+import edu.umd.cs.findbugs.test.SpotBugsRunner;
 
-public class FindUnsatisfiedObligationTest {
-    @Rule
-    public SpotBugsRule spotbugs = new SpotBugsRule();
+@ExtendWith(SpotBugsExtension.class)
+class FindUnsatisfiedObligationTest {
+
+    public SpotBugsExtension spotbugs = new SpotBugsExtension();
 
     /**
      * @see <a href="https://github.com/spotbugs/spotbugs/issues/60">GitHub
      *      issue</a>
      */
     @Test
-    public void testIssue60() {
-        BugCollection bugCollection = spotbugs.performAnalysis(Paths.get("../spotbugsTestCases/build/classes/java/main/lambdas/Issue60.class"));
+    void testIssue60(SpotBugsRunner spotbugs) {
+        BugCollection bugCollection = spotbugs.performAnalysis(Path.of("../spotbugsTestCases/build/classes/java/main/lambdas/Issue60.class"));
         assertThat(bugCollection, is(emptyIterable()));
     }
 }
